session9/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s.kuboard.cn/name: httpserver
  name: httpserver
  namespace: default
spec:
  clusterIP: 10.106.59.220
  ports:
    - name: hek8fr
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app/name: httpserver
  type: ClusterIP
