session9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    k8s.kuboard.cn/name: httpserver
  name: httpserver
  namespace: default
spec:
  rules:
    - host: www.lkm-httpserver.com
      http:
        paths:
          - backend:
              service:
                name: httpserver
                port:
                  number: 5432
            path: /
            pathType: Exact
          - backend:
              service:
                name: httpserver
                port:
                  number: 5432
            path: /healthz
            pathType: Exact
